# pve-sdk-rs

./: .gitignore  Cargo.toml  PROJECT_NOTES.md  README.md
.github/workflows/: ci.yml
examples/: access_acl_manage.rs  create_qemu_vm.rs  list_all_guests.rs  list_resources.rs  read_all_features.rs  vzdump_backup.rs
examples/common/: mod.rs
pve_docs/: 01-auth-and-request.md  02-cluster-and-node.md  03-qemu-vm.md  04-lxc.md  05-storage-and-backup.md  06-tasks-and-errors.md  README.md
pve_docs_dev/: 01-sdk-coverage-roadmap.md  02-sdk-module-split-design.md  03-redundancy-trim-checklist.md
pve_sdk_docs/: 01-getting-started.md  02-client-option-and-auth.md  03-auth-methods-env.md  04-core-operations.md  05-task-and-error-handling.md  06-examples-guide.md  07-best-practices.md  08-migration-notes.md  09-faq.md  README.md
src/: client.rs  client_api.rs  client_option.rs  error.rs  lib.rs  models.rs  params.rs  requests.rs
src/core/: auth.rs  mod.rs  transport.rs
src/services/operations/: access.rs  cluster.rs  datacenter.rs  lxc.rs  mod.rs  node.rs  qemu.rs  raw.rs  storage.rs  system.rs  task.rs
src/types/: access.rs  backup.rs  cluster.rs  common.rs  datacenter.rs  lxc.rs  mod.rs  node.rs  qemu.rs  storage.rs  task.rs
tests/: mock_integration.rs
