[package]
name = "pve-sdk-rs"
version = "0.1.0"
edition = "2024"
description = "Async Rust SDK for the Proxmox VE API"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/pve-sdk-rs"
keywords = ["proxmox", "pve", "sdk", "virtualization", "api"]
categories = ["api-bindings"]

[dependencies]
percent-encoding = "2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "query", "form", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2"

[dev-dependencies]
dotenvy = "0.15"
